fixed spacing/size

--- a/hex.css
+++ b/hex.css
@@ -1,11 +1,11 @@
 body {
-  font-size: 150px;
+  font-size: 100px;
   color: white;
   margin: 0 auto;
 }
 
 .container {
-  height: 600px;
+  height: 800px;
 
   position: relative;
 }
